Anh fix overflow template

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,9 +1,14 @@
 html {
-    overflow-x: hidden;
+    /* overflow-x: hidden;
     overflow-y: hidden!important;
-    overflow: hidden;
+    overflow: hidden; */
+    overflow-y: unset;
     height: 100vh;
     width: 100vw;
+}
+body {
+    height: 100%;
+    overflow: hidden;
 }
 
 :root {
